--- a/oweee.html
+++ b/oweee.html
@@ -685,7 +685,7 @@
                         </p>
                     </div>
                     <div class="about-image">
-                        <img src="images/IMG_E5687.JPG" alt="Owen Tavaziva">
+                        <img src="IMG_E5687.JPG" alt="Owen Tavaziva">
                     </div>
                 </div>
             </div>
@@ -882,4 +882,5 @@
     </script>
 </body>
 </html>
+
 
